Remove fixed z-index for node elements

--- a/styles/node.css
+++ b/styles/node.css
@@ -186,7 +186,6 @@ em.strikethrough {
   width: 100%;
   border-radius: 0 0 5px 5px;
   left: 0;
-  z-index: 1;
 }
 
 .node .image-x {
@@ -201,7 +200,6 @@ em.strikethrough {
   background-color: var(--color-node);
   border-radius: 5px;
   padding: 0px 2px 2px 2px;
-  z-index: 2;
 }
 .node .image-x i {
   pointer-events: none;
@@ -218,7 +216,6 @@ em.strikethrough {
   font-size: 11px;
   border-radius: 5px;
   padding: 1px 0 0 3px;
-  z-index: 2;
 }
 .node .body:hover ~ .resizer {
   background-color: var(--color-node);
@@ -235,7 +232,6 @@ em.strikethrough {
   bottom: 7px;
   right: 3px;
   font-size: 9px;
-  z-index: 1;
 }
 .node .resizer.resize-width i {
   transform: rotate(90deg);
